# TEcounter-LTR

./: README.md  pyproject.toml
docs/: CLI_GUIDE.md
docs/examples/: drMalDome5.1_family_summary.tsv
tecounter/: __init__.py  __main__.py  cli.py
tecounter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tecounter/core/: __init__.py  assemble.py  cluster.py  compare.py  counts.py  domains.py  normalize.py  pipeline.py  qc.py  representatives.py
tecounter/io/: __init__.py  fasta.py  gff.py  manifest.py  tsv.py
tecounter/util/: hashing.py  logging.py  text.py
